@@ -1,4 +1,5 @@
 version 0.6.0 - currently working on
+- [#994] Make more fields exclude fields
 - [#1638] Require PHP5
 - [#1639] Updated copyright lines to 2008
 
